"""Velbus sensor platform tests."""

from unittest.mock import AsyncMock, patch

from syrupy.assertion import SnapshotAssertion

from homeassistant.const import Platform, STATE_UNKNOWN
from homeassistant.core import HomeAssistant
from homeassistant.helpers import entity_registry as er

from . import init_integration

from tests.common import MockConfigEntry, snapshot_platform


async def test_entities(
    hass: HomeAssistant,
    snapshot: SnapshotAssertion,
    config_entry: MockConfigEntry,
    entity_registry: er.EntityRegistry,
) -> None:
    """Test all entities."""
    with patch("homeassistant.components.velbus.PLATFORMS", [Platform.SENSOR]):
        await init_integration(hass, config_entry)

    await snapshot_platform(hass, entity_registry, snapshot, config_entry.entry_id)


async def test_vmb8in_counter_energy_value(
    hass: HomeAssistant,
    config_entry: MockConfigEntry,
    mock_buttoncounter: AsyncMock,
) -> None:
    """Test VMB8IN-20 counter sensor shows energy in kWh when _energy is set."""
    mock_buttoncounter._energy = 100000  # 100000 Wh = 100.0 kWh
    with patch("homeassistant.components.velbus.PLATFORMS", [Platform.SENSOR]):
        await init_integration(hass, config_entry)

    state = hass.states.get("sensor.input_buttoncounter_counter")
    assert state is not None
    assert state.state == "100.0"


async def test_vmb8in_counter_energy_unavailable_when_no_energy(
    hass: HomeAssistant,
    config_entry: MockConfigEntry,
    mock_buttoncounter: AsyncMock,
) -> None:
    """Test VMB8IN-20 counter sensor is unknown when _energy has not been received."""
    mock_buttoncounter._energy = None
    with patch("homeassistant.components.velbus.PLATFORMS", [Platform.SENSOR]):
        await init_integration(hass, config_entry)

    state = hass.states.get("sensor.input_buttoncounter_counter")
    assert state is not None
    assert state.state == STATE_UNKNOWN


async def test_vmb8in_power_sensor_uses_counter_state(
    hass: HomeAssistant,
    config_entry: MockConfigEntry,
    mock_buttoncounter: AsyncMock,
) -> None:
    """Test VMB8IN-20 power sensor value comes from get_counter_state()."""
    mock_buttoncounter.get_counter_state.return_value = 650
    with patch("homeassistant.components.velbus.PLATFORMS", [Platform.SENSOR]):
        await init_integration(hass, config_entry)

    state = hass.states.get("sensor.input_buttoncounter")
    assert state is not None
    assert state.state == "650.0"
